--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,17 +10,18 @@
       </a>
     </div>
 
-    <ul>
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "category" %}
-            <li><a class="category-link {% if page.url == node.url %} active{% endif %}"
-            href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a></li>
+    <div class="header-category">
+      <ul>
+        {% assign pages_list = site.pages %}
+        {% for node in pages_list %}
+          {% if node.title != null %}
+            {% if node.layout == "category" %}
+              <li><a class="category-link {% if page.url == node.url %} active{% endif %}"
+              href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a></li>
+            {% endif %}
           {% endif %}
-        {% endif %}
-      {% endfor %}
-    </ul>
-
+        {% endfor %}
+      </ul>
+    </div>
   </div>
 </header>
