--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
       <div class="outer">
         {% include header.html %}
-
+        {% include categoryheader.html %}
         <div class="page-content">
           <div class="wrapper">
             {{ content }}
